instance1/temp-retrieve/objects/Medical_Recommendation__c/fields/Account_Email_For_Survey__c.field-meta.xml
<CustomField>
    <fullName>Account_Email_For_Survey__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Email For Survey</label>
    <type>Email</type>
</CustomField>