instance1/temp-retrieve/objects/Medical_Recommendation__c/fields/Clinical_Note_Id__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Note_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Clinical Note Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>