instance1/temp-retrieve/objects/Medical_Recommendation__c/fields/Clinical_Note_Link__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Note_Link__c</fullName>
    <formula>IF(NOT(ISNULL(Clinical_Note_Id__c)),
HYPERLINK(&quot;https://drchrono.com/clinical_note/edit/&quot; + Clinical_Note_Id__c, &quot;Clinical Note Link&quot;), &quot;&quot;)</formula>
    <label>Clinical Note Link</label>
    <type>Text</type>
</CustomField>