instance1/temp-retrieve/objects/Medical_Recommendation__c/fields/Medical_Recommendation_Date__c.field-meta.xml
<CustomField>
    <fullName>Medical_Recommendation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Recommendation Date</label>
    <type>Date</type>
</CustomField>