instance1/temp-retrieve/objects/Medical_Recommendation__c/fields/Old_SF_Doctor_Note_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_SF_Doctor_Note_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Old SF Doctor Note ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>