instance1/temp-retrieve/objects/Medical_Recommendation__c/fields/Procedure_s__c.field-meta.xml
<CustomField>
    <fullName>Procedure_s__c</fullName>
    <label>Procedure(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Physical</fullName>
            </value>
            <value>
                <fullName>Blood Draw</fullName>
            </value>
            <value>
                <fullName>Botox</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>Comprehensive Physical</fullName>
            </value>
            <value>
                <fullName>FemiWave Therapy</fullName>
            </value>
            <value>
                <fullName>GAINSWave Therapy</fullName>
            </value>
            <value>
                <fullName>In Person Consult</fullName>
            </value>
            <value>
                <fullName>Inbody</fullName>
            </value>
            <value>
                <fullName>Injection</fullName>
            </value>
            <value>
                <fullName>Labs Review</fullName>
            </value>
            <value>
                <fullName>O-Shot</fullName>
            </value>
            <value>
                <fullName>Phone Consult</fullName>
            </value>
            <value>
                <fullName>PRP Face</fullName>
            </value>
            <value>
                <fullName>PRP Hair</fullName>
            </value>
            <value>
                <fullName>Stem Cell Therapy</fullName>
            </value>
            <value>
                <fullName>Thermiva</fullName>
            </value>
            <value>
                <fullName>Vampire Face Lift</fullName>
            </value>
            <value>
                <fullName>VSEE Consult</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>EMSculpt</fullName>
            </value>
            <value>
                <fullName>P-Shot</fullName>
            </value>
            <value>
                <fullName>I.V Therapy</fullName>
            </value>
            <value>
                <fullName>JuveDerm Injections</fullName>
            </value>
            <value>
                <fullName>Comprehensive lab review and PE</fullName>
            </value>
            <value>
                <fullName>Troche Review</fullName>
            </value>
            <value>
                <fullName>Dexa Scan</fullName>
            </value>
            <value>
                <fullName>COVID Testing</fullName>
            </value>
            <value>
                <fullName>Annual PE &amp; Lab Review</fullName>
            </value>
            <value>
                <fullName>Medication Instructions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>